[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page analyser"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"pyyaml>=6.0.1",
	"flask>=3.0",
	"gunicorn>=20.1.0",
	"python-dotenv>=0.20.0",
	"requests>=2.31.0",
	"beautifulsoup4>=4.12.3",
	"psycopg2-binary>=2.9",
	"validators>=0.1.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]


[dependency-groups]
dev = [
	"pytest>=8.3.4",
	"pytest-cov>=6.0.0",
	"ruff>=0.9.2",
	"flake8>=7.0.0",
	"mypy>=1.8.0",
]
